[package]
name = "booking_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
mongodb = "3.0.1"
serde = { version = "1.0.208", features = ["derive"] }
