[package]
name = "booking_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = "3.0.1"
serde = { version = "1.0.208", features = ["derive"] }
